tests/baselines/reference/nodeResolution11.errors.txt
tests/cases/compiler/b.ts(10,22): error TS2339: Property 'staticMember' does not exist on type 'Foo'.


==== tests/cases/compiler/b.ts (1 errors) ====
    /// <reference path="ref.d.ts"/>
    import y = require("a");
    
    let foo: number = y.foo;
    let bigFoo = y.dummy;
    let n = bigFoo.otherMember; // global foo merged into package Foo, should be here
    
    let foo2: Foo;
    let t: number = foo2.otherMember;
    let e: string = foo2.staticMember; // should error, is global Foo
                         ~~~~~~~~~~~~
!!! error TS2339: Property 'staticMember' does not exist on type 'Foo'.
    
==== tests/cases/compiler/node_modules/a/ref.d.ts (0 errors) ====
    
    interface Foo {
    	staticMember: string;
    }
    
    declare module "internal" {
    	export var foo: number;
    }
    
==== tests/cases/compiler/node_modules/a/index.d.ts (0 errors) ====
    /// <reference path="ref.d.ts"/>
    export var dummy: Foo;
    export var dummyMember: typeof dummy.staticMember;
    export var dummyMember2: typeof dummy.otherMember; // global foo merged in, should be here
    export * from "internal";
    
==== tests/cases/compiler/ref.d.ts (0 errors) ====
    interface Foo {
    	otherMember: number;
    }
    